[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpulse-binding = "2.28.1"
thiserror = "1.0.58"
minifb = "0.25"
mimalloc = "0.1"
rustfft = "6.2.0"

[profile.release]
lto = "thin"
codegen-units = 16
